apis/api3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibonacci-ingress
  namespace: fibonacci
  annotations:
    konghq.com/strip-path: "true"
    #kubernetes.io/ingress.class: kong
    external-dns.alpha.kubernetes.io/hostname: api3.orp-dev.eu
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /fibonacci
            pathType: Prefix
            backend:
              service:
                name: fibonacci-backend-cs
                port:
                  number: 5000
